# citadel-protocol

./: .gitignore  Cargo.toml  GEMINI.md  README.md  SECURITY.md  THE_SOVEREIGN_SPINE.md  policy.json  release.sh  test_sankalpa.json
.github/workflows/: citadel-gate.yml
citadel-a2a-connector/: Cargo.toml  build.rs
citadel-a2a-connector/proto/: handshake.proto
citadel-a2a-connector/src/: lib.rs
citadel-adapters/citadel-adapter-hiero/: Cargo.toml
citadel-adapters/citadel-adapter-hiero/src/: lib.rs
citadel-axum-adapter/: Cargo.toml
citadel-axum-adapter/src/: lib.rs
citadel-mcp-server/: Cargo.toml
citadel-mcp-server/src/: attestPlugin.rs  main.rs  mcp.rs  policy.rs
citadel-mcp-server/src/lang/: en_us.rs  mod.rs
citadel-mcp-server/src/transport/: grpc.rs  mod.rs  sse.rs  stdio.rs
citadel-secrets/: Cargo.toml
citadel-secrets/src/: lib.rs  main.rs
citadel-verifier/: Cargo.toml
citadel-verifier/src/: lib.rs
proxy/: Cargo.toml
proxy/src/: attestPlugin.rs  main.rs  policy.rs
sakshi-core/: Cargo.toml
sakshi-core/src/: lib.rs  provider.rs  repository.rs  sankalpa.rs  types.rs
sakshi-tdx/: Cargo.toml
sakshi-tdx/src/: lib.rs
scripts/: set_identities.sh
tests/: e2e_master_suite.py  generate_test_payload.py  integration_harness.py  mock_backend.py  mock_mtcp_node.py
witness/: Cargo.toml
witness-core/: Cargo.toml
witness-core/src/: lib.rs  morpheme.rs  provider.rs  types.rs
witness-tdx/: Cargo.toml
witness-tdx/src/: lib.rs
witness/src/: lib.rs
