[package]
name = "citadel-a2a-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
sakshi-core = { path = "../sakshi-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
async-trait = "0.1"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
