[package]
name = "citadel-a2a-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
sakshi-core = { workspace = true }
citadel-verifier = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
