[package]
name = "citadel-axum-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
citadel-verifier = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http = "1.4.0"
sakshi-core = { workspace = true }
tower = "0.5.3"
tracing = { workspace = true }
