[package]
name = "citadel-mcp-server"
version = "0.1.0"
edition = "2021"

[features]
tdx = ["sakshi-tdx"]

[dependencies]
sakshi-core = { path = "../sakshi-core" }
sakshi-tdx = { path = "../sakshi-tdx", optional = true }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dotenvy = "0.15"
toml = "0.8"
hex = "0.4"
async-trait = "0.1"
tokio-util = "0.7"
