[package]
name = "citadel-mcp-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["tdx"]
tdx = ["sakshi-tdx"]

[dependencies]
sakshi-core = { path = "../sakshi-core" }
sakshi-tdx = { path = "../sakshi-tdx", optional = true }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "io-std", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dotenvy = "0.15"
toml = "0.8"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
rcgen = "0.13"
ring = "0.17"
x509-parser = "0.18.1"
citadel-a2a-connector = { version = "0.1.0", path = "../citadel-a2a-connector" }
tonic = "0.12"
