[package]
name = "citadel-mcp-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["tdx", "sse", "stdio", "hiero", "mock-hardware"]
tdx = ["sakshi-tdx"]
sse = ["axum", "tokio-util"]
stdio = ["tokio-util"]
hiero = ["citadel-adapter-hiero"]
mock-hardware = ["sakshi-core/mock-hardware", "citadel-verifier/mock-hardware"]

[dependencies]
sakshi-core = { workspace = true }
citadel-verifier = { workspace = true }
sakshi-tdx = { workspace = true, optional = true }
citadel-adapter-hiero = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = false }
dotenvy = "0.15"
toml = "0.8"
hex = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true, optional = true }
futures = { workspace = true }
rcgen = { workspace = true }
ring = { workspace = true }
x509-parser = { workspace = true }
citadel-a2a-connector = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
