[package]
name = "citadel-secrets"
version = "0.1.0"
edition = "2021"

[dependencies]
sakshi-core = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }

# Vault Encryption
age = "0.9.1" 
secrecy = "0.8.0" # REQUIRED: For extracting the age SecretString

# Data Handling
serde = { workspace = true, features = ["derive"] } 
serde_json = { workspace = true } 

# Cryptography & Utils
x25519-dalek = "2.0.0" 
rand = "0.8.5" 
dirs-next = "2.0.0"

[[bin]]
name = "citadel-secrets-mgr"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["clap", "tracing-subscriber"]
