[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal Hardware Layer
witness = { path = "../witness", default-features = true }

# Core Runtime & Networking
tokio = { version = "1.36", features = ["full", "macros"] }
tokio-util = "0.7"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
hex = "0.4"
dotenvy = "0.15"

# Governance & External Services
hedera = "0.20.0"
async-trait = "0.1"
