[package]
name = "sakshi-tdx"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["sakshi-core/std"]
[dependencies]
sakshi-core = { workspace = true, default-features = false }
nix = { version = "0.29", features = ["ioctl"] }
hex = { workspace = true }

[[bin]]
name = "get_real_mrtd"
path = "src/bin/get_real_mrtd.rs"
