[package]
name = "witness-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
sha3 = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
