[package]
name = "citadel-adapter-hiero"
version = "0.1.0"
edition = "2021"

[dependencies]
sakshi-core = { workspace = true }
hedera = "0.20"
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
dotenvy = "0.15"
tracing-subscriber = { workspace = true }
clap = { workspace = true }
citadel-secrets = { workspace = true }

[dev-dependencies]
mockito = "1.5.0"
serial_test = "3.1.1"
